--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -5,10 +5,12 @@
 
         <section class="col-3">
             <h5 class="text-warning ml-3">Sort</h5>
-            <select class="custom-select mb-3">
-                <option>Alphabetical</option>
-                <option>Price: Low to High</option>
-                <option>Price: High to Low</option>
+            <select class="custom-select mb-3"(change)="onSortSelected($event.target.value)">
+                <option *ngFor="let sort of sortOptions"
+                    [value]="sort.value"
+                >
+                    {{sort.name}}
+                </option>
 
             </select>
 
@@ -16,7 +18,7 @@
             <ul class="list-group my-3">
                 <li class="list-group-item" 
                     *ngFor="let brand of brands"
-                    [class.active]="brand.id === this.brandIdSelected"
+                    [class.active]="brand.id === this.shopParams.brandId"
                     [value]="brand.id"
                     (click)="onBrandSelected(brand.id)"
                     >
@@ -27,7 +29,7 @@
             <ul class="list-group my-3">
                 <li class="list-group-item" 
                     *ngFor="let type of types"
-                    [class.active]="type.id === this.typeIdSelected"
+                    [class.active]="type.id === this.shopParams.typeId"
                     [value]="type.id"
                     (click)="onTypeSelected(type.id)"
                     >
@@ -55,6 +57,16 @@
                 <div class="col-4 mb-4" *ngFor="let item of products">
                     <app-product-item [product]="item"></app-product-item>
                 </div>
+            </div>
+            <div class="d-flex justify-content-center">
+                <pagination 
+                    [boundaryLinks]="true" 
+                    [totalItems]="this.totalCount"
+                    previousText="&lsaquo;" 
+                    nextText="&rsaquo;" 
+                    firstText="&laquo;" 
+                    lastText="&raquo;"> 
+                </pagination>
             </div>
         </section>
     </div>
