--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -49,9 +49,9 @@
                 ></app-paging-header>
 
                 <div class="form-inline mt-2">
-                    <input class="form-control mr-2" type="text" style="width: 300px;" placeholder="Search">
-                    <button class="btn btn-outline-primary my-2">Search</button>
-                    <button class="btn btn-outline-success my-2 ml-2">Reset</button>
+                    <input (keyup.enter)="onSearch()" class="form-control mr-2" #search type="text" style="width: 300px;" placeholder="Search">
+                    <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
+                    <button (click)="onReset()" class="btn btn-outline-success my-2 ml-2">Reset</button>
 
                 </div>
             </div>
@@ -63,16 +63,13 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center" *ngIf="totalCount > 0">
-                <pagination 
-                    [boundaryLinks]="true" 
-                    [totalItems]="this.totalCount"
+                
+                <app-pager
+                    [pageSize]="shopParams.pageSize"
+                    [totalCount]="totalCount"
                     (pageChanged)="onPageChanged($event)"
-                    [itemsPerPage]="this.shopParams.pageSize"
-                    previousText="&lsaquo;" 
-                    nextText="&rsaquo;" 
-                    firstText="&laquo;" 
-                    lastText="&raquo;"> 
-                </pagination>
+                ></app-pager>
+
             </div>
         </section>
     </div>
