--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,41 +1,46 @@
 
 
-<div class="container mt-5">
+<div class="container mt-3">
     <div class="row">
 
         <section class="col-3">
-            <h5 class="text-warning ml-3">Sort</h5>
-            <select class="custom-select mb-3"(change)="onSortSelected($event.target.value)">
-                <option *ngFor="let sort of sortOptions"
-                    [value]="sort.value"
-                >
-                    {{sort.name}}
-                </option>
 
-            </select>
+            <ng-container *ngIf="types && brands">
 
-            <h5 class="text-warning ml-3">Brands</h5>
-            <ul class="list-group my-3">
-                <li class="list-group-item" 
-                    *ngFor="let brand of brands"
-                    [class.active]="brand.id === this.shopParams.brandId"
-                    [value]="brand.id"
-                    (click)="onBrandSelected(brand.id)"
+                <h5 class="text-warning mt-4 mb-3">Sort</h5>
+                <select class="custom-select mb-4"(change)="onSortSelected($event.target.value)">
+                    <option *ngFor="let sort of sortOptions"
+                        [value]="sort.value"
                     >
-                    {{brand.name}}
-                </li>
-            </ul>
-            <h5 class="text-warning ml-3">Types</h5>
-            <ul class="list-group my-3">
-                <li class="list-group-item" 
-                    *ngFor="let type of types"
-                    [class.active]="type.id === this.shopParams.typeId"
-                    [value]="type.id"
-                    (click)="onTypeSelected(type.id)"
-                    >
-                    {{type.name}}
-                </li>
-            </ul>
+                        {{sort.name}}
+                    </option>
+
+                </select>
+
+                <h5 class="text-warning ml-3">Brands</h5>
+                <ul class="list-group my-3">
+                    <li class="list-group-item" 
+                        *ngFor="let brand of brands"
+                        [class.active]="brand.id === this.shopParams.brandId"
+                        [value]="brand.id"
+                        (click)="onBrandSelected(brand.id)"
+                        >
+                        {{brand.name}}
+                    </li>
+                </ul>
+                <h5 class="text-warning ml-3">Types</h5>
+                <ul class="list-group my-3">
+                    <li class="list-group-item" 
+                        *ngFor="let type of types"
+                        [class.active]="type.id === this.shopParams.typeId"
+                        [value]="type.id"
+                        (click)="onTypeSelected(type.id)"
+                        >
+                        {{type.name}}
+                    </li>
+                </ul>
+
+            </ng-container>
               
         </section>
 
@@ -48,11 +53,10 @@
                     [pageNumber]="this.shopParams.pageNumber"
                 ></app-paging-header>
 
-                <div class="form-inline mt-2">
+                <div class="form-inline" *ngIf="products">
                     <input (keyup.enter)="onSearch()" class="form-control mr-2" #search type="text" style="width: 300px;" placeholder="Search">
                     <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
                     <button (click)="onReset()" class="btn btn-outline-success my-2 ml-2">Reset</button>
-
                 </div>
             </div>
             
